revising staff assign and more student assign eff